Revert "nexus-cache doesn't appear to need interceptor-api or transation-api anymore?"
This reverts commit 792a0cad6e6b7db4a1e2ff0e34cc9dd2822dc606.

--- a/components/nexus-cache/pom.xml
+++ b/components/nexus-cache/pom.xml
@@ -39,6 +39,16 @@
     </dependency>
 
     <dependency>
+      <groupId>javax.interceptor</groupId>
+      <artifactId>javax.interceptor-api</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>javax.transaction-api</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.sonatype.nexus.bundles</groupId>
       <artifactId>org.sonatype.nexus.bundles.ehcache</artifactId>
     </dependency>
