--- a/components/nexus-common/pom.xml
+++ b/components/nexus-common/pom.xml
@@ -50,6 +50,11 @@
 
     <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
+      <artifactId>org.apache.servicemix.bundles.javax-inject</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.aopalliance</artifactId>
     </dependency>
 
