--- a/buildsupport/other/pom.xml
+++ b/buildsupport/other/pom.xml
@@ -96,6 +96,12 @@
       </dependency>
 
       <dependency>
+        <groupId>javax.el</groupId>
+        <artifactId>javax.el-api</artifactId>
+        <version>2.2.5</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.glassfish.web</groupId>
         <artifactId>javax.el</artifactId>
         <version>2.2.6</version>
